Views/wwwroot/css/Customcss.css
body {
    font-family: 'IBM Plex Sans', sans-serif;
    font-size: 15px;
}
.opthead {
    background-color: #1469c0;
    width: 100%;  
    padding:3px;
    padding-top:9px;
    padding-left:10px;
    color: #fff;
    font-family: 'Ubuntu', sans-serif;
}
.subbutn {
    font-size: 20px;
    font-weight: 600;
    font-family: 'Ubuntu', sans-serif;
    margin-right:2%;
}
.scsbtn{
    background-color:#0d8219;
    color:#fff;
}
.mainbtn {
    background-color: #1469c0;
    color: #fff;
    text-transform: capitalize;
    padding-right: 1%
}
    .mainbtn:is(:hover) {
        background-color: #114c88;
    }
.scbtn {
    text-transform: capitalize;
    padding-right: 1%
}
.rowclas{
    color:#1469c0
}
.addstyle {
    background-color: #177de6;
    color: #fff;
    text-transform: capitalize;
    padding-right: 1%;
    border:none;
    box-shadow:none;
    float:right;
}
.dropstyle{
    font-size:11px;
    padding:0px;
    margin:0px;  
}

